fix:GC部分错误